--- a/TSP.ipynb
+++ b/TSP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuec499cee/q2kDsvaAV9e",
+      "authorship_tag": "ABX9TyM6zBYqBWtszrOxyovMUSqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,44 +60,56 @@
         "\n",
         "\n",
         "\n",
-        "**Dates (month/day/year): 01/01/2017 through 08/01/2023**\n",
+        "**Dates (month/day/year): 01/01/1983 through 08/01/2023**\n",
         "*   Location: Latitude  35.0382   Longitude 9.4849\n",
         "*   Elevation from MERRA-2: Average for 0.5 x 0.625 degree lat/lon region = 408.34 meters\n",
         "\n",
         "**The value for missing source data that cannot be computed or is outside of the sources availability range: -**\n",
-        "999 Parameter(s):\n",
         "\n",
-        "*   T2M             MERRA-2 Temperature at 2 Meters (C)\n",
-        "\n",
-        "*   WD10M                   MERRA-2 Wind Direction at 10 Meters (Degrees)\n",
-        "\n",
-        "*   WS50M                   MERRA-2 Wind Speed at 50 Meters (m/s)\n",
+        "Parameter(s):\n",
         "\n",
         "\n",
         "\n",
-        "*   RH2M            MERRA-2 Relative Humidity at 2 Meters (%)\n",
+        "* ALLSKY_SFC_SW_DWN       CERES SYN1deg -\n",
+        "All Sky Surface Shortwave Downward Irradiance (kW-hr/m^2/day)\n",
         "\n",
+        "* ALLSKY_KT               CERES SYN1deg - All Sky Insolation Clearness Index (dimensionless)\n",
         "\n",
-        "*   PRECTOTCORR     MERRA-2 Precipitation Corrected (mm/day)\n",
+        "* ALLSKY_SFC_LW_DWN       CERES SYN1deg - All Sky Surface Longwave Downward Irradiance (W/m^2)\n",
         "\n",
+        "* ALLSKY_SFC_PAR_TOT      CERES SYN1deg - All Sky Surface PAR Total (W/m^2)\n",
         "\n",
-        "*   WS10M           MERRA-2 Wind Speed at 10 Meters (m/s)\n",
+        "* CLRSKY_SFC_PAR_TOT      CERES SYN1deg - Clear Sky Surface PAR Total (W/m^2)\n",
         "\n",
+        "* ALLSKY_SFC_UV_INDEX     CERES SYN1deg - All Sky Surface UV Index (dimensionless)\n",
         "\n",
+        "* ALLSKY_SFC_UVA          CERES SYN1deg - All Sky Surface UVA Irradiance (W/m^2)\n",
         "\n",
-        "*   T2MDEW                  MERRA-2 Dew/Frost Point at 2 Meters (C)\n",
+        "* ALLSKY_SFC_UVB          CERES SYN1deg - All Sky Surface UVB Irradiance (W/m^2)\n",
         "\n",
+        "* T2M                     MERRA-2 - Temperature at 2 Meters (C)\n",
         "\n",
-        "*   TS                      MERRA-2 Earth Skin Temperature (C)\n",
+        "* T2MDEW                  MERRA-2 - Dew/Frost Point at 2 Meters (C)\n",
         "\n",
+        "* T2M_MAX                 MERRA-2 - Temperature at 2 Meters Maximum (C)\n",
         "\n",
-        "*   PS                      MERRA-2 Surface Pressure (kPa)\n",
+        "* T2M_MIN                 MERRA-2 - Temperature at 2 Meters Minimum (C)\n",
         "\n",
-        "*   WD50M                   MERRA-2 Wind Direction at 50 Meters (Degrees)\n",
+        "* TS                      MERRA-2 - Earth Skin Temperature (C)\n",
         "\n",
+        "* WS10M                   MERRA-2 - Wind Speed at 10 Meters (m/s)\n",
         "\n",
+        "* WD10M                   MERRA-2 - Wind Direction at 10 Meters (Degrees)\n",
         "\n",
-        "*   ALLSKY_SFC_UV_INDEX     CERES SYN1deg All Sky Surface UV Index (dimensionless)\n",
+        "* WS50M                   MERRA-2 - Wind Speed at 50 Meters (m/s)\n",
+        "\n",
+        "* WD50M                   MERRA-2 - Wind Direction at 50 Meters (Degrees)\n",
+        "\n",
+        "* PS                      MERRA-2 - Surface Pressure (kPa)\n",
+        "\n",
+        "* PRECTOTCORR             MERRA-2 - Precipitation Corrected (mm/day)\n",
+        "\n",
+        "* RH2M                    MERRA-2 - Relative Humidity at 2 Meters (%)\n",
         "\n",
         "\n",
         "\n",
@@ -1148,7 +1160,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 713
         },
         "id": "9voc4wrH9Z7_",
         "outputId": "30c030dc-beed-4896-b6ca-36a5edbd2fdf"
@@ -1226,7 +1238,7 @@
         "id": "WSpqQOqa_1oj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 909
+          "height": 443
         },
         "outputId": "ac17bec9-d1d0-4d9a-c8ef-2fa91c620305"
       },
@@ -2301,7 +2313,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 411
+          "height": 431
         },
         "id": "jcBgQbIZme4x",
         "outputId": "8cd64141-9505-4553-c9dc-bd15dc4c1b63"
@@ -2626,7 +2638,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 552
+          "height": 572
         },
         "id": "BPptpq90mUYZ",
         "outputId": "f072ad09-c497-41fa-b583-9ca30e95e7bf"
